# godot-vim

./: .gitignore  .godot-vimrc.sample  CHANGELOG.md  Cargo.toml  LOGGING.md  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: release.yml  scan.yml
addons/godot_vim/: godot_vim.gd  godot_vim.gdextension  plugin.cfg
docs/: REFERENCE.md
src/: lib.rs  logging.rs  safety.rs  scene_tree.rs  types.rs
src/bridge/: clipboard.rs  code_edit_ext.rs  codec.rs  context.rs  document.rs  entry.rs  godot_calls.rs  godot_host.rs  input.rs  mod.rs  port.rs  port_impl.rs  vim_wrapper.rs  vim_wrapper_cmdline.rs  vim_wrapper_dock.rs  vim_wrapper_signals.rs  vim_wrapper_util.rs
src/config/: mapping_service.rs  mod.rs  parser.rs  path.rs  presets.rs  sandbox.rs  types.rs  writer.rs
src/controller/: completion.rs  context.rs  host_bridge.rs  mod.rs  norm.rs  passthrough.rs  perf.rs  process.rs  reconcile.rs  vimdebug.rs
src/effects/: auto_brace.rs  compound.rs  cursor.rs  dispatch.rs  messages.rs  mod.rs  mode.rs  navigation.rs  registers.rs  scroll.rs  search.rs  text.rs  undo.rs
src/host/: buffer.rs  clipboard.rs  custom_commands.rs  dispatch.rs  editor_host.rs  error.rs  eval.rs  external.rs  file.rs  mod.rs
src/multi_cursor/: keybindings.rs  mod.rs  sync.rs
src/navigation/: cycle.rs  dock.rs  dock_nav.rs  dock_search.rs  filesystem_explorer.rs  focus.rs  mod.rs  window.rs
src/plugin/: attach.rs  discovery.rs  floating.rs  input.rs  lifecycle.rs  mod.rs  signals.rs
src/settings/: defaults.rs  keys.rs  mod.rs  reader.rs  registration.rs  snapshot.rs
src/state/: buffer.rs  globals.rs  mod.rs  shell.rs  (+3 more)
tests/: architecture.rs
(+182 files in other folders)
