[package]
name = "godot-vim"
version = "1.6.0"
edition = "2021"
description = "Vim emulation plugin for the Godot game engine"
license = "MIT"
authors = ["hmdfrds"]
repository = "https://github.com/hmdfrds/godot-vim"
readme = "README.md"
keywords = ["godot", "vim", "editor", "gdextension"]
categories = ["development-tools", "text-editors"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", tag = "v0.4.5" }
vim-core = { git = "https://github.com/hmdfrds/vim-core.git", tag = "v0.7.0" }
bitflags = "2"
unicode-segmentation = "1.10"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
compact_str = "0.7"

[dev-dependencies]
proptest = "1.4"
smallvec = "1"


[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
debug = false
rpath = false
